Fixed splash spacing

--- a/src/Splash/Splash.scss
+++ b/src/Splash/Splash.scss
@@ -1,16 +1,22 @@
 .splash-holder {
     text-align: right;
-    display:inline-block
+    display:block;
+    float: right;
+    position: relative;
 }
 
 .text-holder {
-    display:inline-block;
+    display:block;
     padding-left: 400px;
+    float: left;
     padding-right: 50px;
+    padding-top: 150px;
 }
 
+
 .splash {
-    object-fit: cover;
+    object-fit: cover; 
+    max-width: 100%;
 }
 
 .splashParent {
@@ -19,6 +25,7 @@
     border-left-width: 0px;
     border-right-width: 0px;
     padding-top: 120px;
+    overflow: hidden;
 }
 
 .button {
@@ -27,7 +34,9 @@
     background:none;
     border: solid black .1px;
     border-radius: 5px;
-    padding: 10px
+    padding: 10px;
+    display: block;
+    float: left;
 }
 
 .button:hover {
